[tool.poetry]
name = "grandmaster"
version = "0.1.0"
description = "Certify your knowledge from AI assisted youtube videos information"
authors = ["joseporiolayats <oriol.ayats@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
